# mediscara

./: .env  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  config.yaml  install.bat  install.sh  launch.sh  main.spec
.github/workflows/: pylint.yaml
docker/: build.sh  launch.sh
fiware/: docker-compose.yml  docker-compose.yml.save
fiware/fiware/: docker-compose.yml.save.1  launch.sh  launch.sh.save  launch_is.sh  wait-for-it.sh:Zone.Identifier
install/: local_setup.sh  setup.sh
interfaces/: CMakeLists.txt
interfaces/msg/: KPIC1.msg
is_ws/: data.json  nohup.out  ros_server.yaml
is_ws/src/interfaces/: CMakeLists.txt  package.xml
log/: latest_build
manager/: requirements.txt  requirements_dev.txt  setup.cfg  setup.py
manager/src/: main.py
manager/src/manager/: __init__.py  fiware.py  interfaces.py
manager/src/manager/gui/: cell_collab.py  cell_industrial.py  gui.py  settings.py
manager/src/manager/gui/layout/: collaborative.py  collaborative.ui  collaborative_item.ui  gui.py  gui.ui  industrial.py  industrial.ui  industrial_item.py  industrial_item.ui  preferences.py  preferences.ui
manager/src/manager/message/: __init__.py  interface.py
manager/src/manager/production/: __init__.py  interface.py  model.py
manager/tests/: __init__.py  test_fiware.py  test_interfaces.py  test_messages.py  test_production.py
mediscara/: package.xml  setup.py
mediscara/launch/: all.launch.py
mediscara/mediscara/: config.py  hmi_collab_node.py  marker_node.py  robot1_node.py  robot2_node.py
mediscara/mediscara/scripts/: SQLGui.py  hmi.py  logger.py  ros_node.py  serial_manager.py  socket_manager.py  (+2 more)
mediscara_ws/: .gitignore
mysql/: docker-compose.yaml
scripts/: build.sh  copy_messages.sh  install.sh
sensor/: requirements.txt  setup.cfg  test_data_model.py
sensor/src/: ngsi.py  sensor.py  temperature.py
sensor/src/sensor/: __init__.py  communication.py  config.py  main.py  ngsi.py  sensor.py  shock.py  temp_hum.py
sensor/tests/: test_communication.py  test_data_model.py  test_sensor.py
src/: .gitignore
src/interfaces/: CMakeLists.txt  package.xml
src/mediscara/: setup.cfg  setup.py
(+162 files in other folders)
