[metadata]
name = Fiware Manager
description = This program allows the manager to upload and manage the production and task data in the orion context broker
author = Peter Puska
platforms = win32, linux
classifiers =
    Programming language :: Python :: 3
version = attr: manager.__version__

[options]
packages = find:
install-requires =
    coloredlogs>=15
    requests>=2
python-requires = >= 3.6
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=7.0
    pytest-cov>=3.0
    pylint>=2.13

[options.packages.find]
where = src
ignore = tests*
