[metadata]
name = mediscara_sensor
version = 0.0.1
author = Peter Puska
author_email = ppuska@lasram.hu
description = This is a package for interfacing with an array of sensors and uploading the data to the Orion Context Broker

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2
    pigpio_dht >= 0.3
    coloredlogs >= 15
    RPi.GPIO >= 0.7

[options.packages.find]
where = src