[metadata]
name = mediscara_sensor
version = sensor.__version__
author = Peter Puska
author_email = ppuska@lasram.hu
description = This is a package for interfacing with an array of sensors and uploading the data to the Orion Context Broker

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    requests >= 2
    pigpio_dht >= 0.3
    coloredlogs >= 15
    RPi.GPIO >= 0.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mediscara-sensor = sensor.main:main